FIX, align attribute title CSS

--- a/style.css
+++ b/style.css
@@ -201,11 +201,13 @@ svg {
 }
 
 .volume-container {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+  position: relative;
+  width: 30px;
+  height: 30px;
 }
 .volume-slider-container {
+  left: 50%;
+  transform: translateY(-210px) translateX(-50%) rotate(-90deg);
   position: absolute;
   display: none;
   background-color: #000019;
@@ -215,7 +217,6 @@ svg {
   padding: 0 0.5rem;
   height: 50px;
   padding-left: 20px;
-  transform: translateY(-150px) translateX(-90px) rotate(-90deg);
   transition: width 150ms ease-in-out, transform 150ms ease-in-out;
 }
 .volume-slider {
@@ -321,11 +322,11 @@ svg {
   display: block;
 }
 .container-title {
-  position: absolute;
   display: inline-block;
-  top: -60px;
-  width: auto;
-  transform: translateX(-70%);
+  position: absolute;
+  top: -70px;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 1);
   color: #fff;
   font-weight: bold;
@@ -335,6 +336,16 @@ svg {
   white-space: nowrap;
   font-size: 15px;
   z-index: 200;
+}
+.container-title.fullscreen {
+  right: 0;
+  left: auto;
+  transform: none;
+}
+.container-title.play-pause {
+  left: 0;
+  right: auto;
+  transform: none;
 }
 .video-container.paused .show-controls,
 .video-container.controls .show-controls {
